Fix the word wrapping issue in Safari

--- a/src/components/TopNav.module.scss
+++ b/src/components/TopNav.module.scss
@@ -126,6 +126,7 @@
     color: var(--main);
     font-size: calc(.375 * var(--bootstrap-padding));
     line-height: .75;
+    white-space: nowrap;
 
     &.prize-year {
       font-size: var(--bootstrap-padding);
